--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,10 +1,9 @@
-PORT = 8000
-NODE_ENV = development
-DB_LOCAL_URI = mongodb://localhost:27017/adra_dashboard
+PORT = 8001
+NODE_ENV = production 
+MONGODB_LIVE_URI = mongodb+srv://kumarkrishna11231:Prema16@adracluster.xc0ui.mongodb.net/adra?retryWrites=true&w=majority&appName=adraCluster
 
 JWT_SECRET = AD6715AC9F18B
-JWT_EXPIRES_TIME=7d
-COOKIE_EXPIRES_TIME=7
+JWT_EXPIRES_TIME=5s
 
 SMTP_HOST=sandbox.smtp.mailtrap.io
 SMTP_PORT=2525
