--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "dayjs": "^1.11.13",
     "react": "^18.3.1",
@@ -14,6 +15,7 @@
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
     "react-google-charts": "^4.0.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-paginate": "^8.2.0",
     "react-pdf": "^9.1.0",
