--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@redux-devtools/extension": "^3.3.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -10,12 +11,13 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "dayjs": "^1.11.13",
+    "js-sha256": "^0.11.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
     "react-google-charts": "^4.0.1",
-    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-paginate": "^8.2.0",
     "react-pdf": "^9.1.0",
@@ -23,8 +25,11 @@
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.7.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -50,5 +55,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://127.0.0.1:8000"
 }
