UPDATE : redux thunk with protected login

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -3,11 +3,11 @@ NODE_ENV = development
 MONGODB_LIVE_URI = mongodb+srv://kumarkrishna11231:Prema16@adracluster.xc0ui.mongodb.net/adra?retryWrites=true&w=majority&appName=adraCluster
 
 JWT_SECRET = AD6715AC9F18B
-JWT_EXPIRES_TIME=30m
+JWT_EXPIRES_TIME=1h
 
 SMTP_HOST=sandbox.smtp.mailtrap.io
 SMTP_PORT=2525
 SMTP_USER=8d34823b18dfd8
 SMPT_PASS=0ca7913e723d98
 SMTP_FROM_NAME=krishna
-SMTP_FROM_EMAIL=noreply@krishna.com
+SMTP_FROM_EMAIL=noreply@krishna.com 
