--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "dayjs": "^1.11.13",
+    "js-cookie": "^3.0.5",
     "js-sha256": "^0.11.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
