--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
     "socket.io": "^4.7.5",
+    "uuid": "^10.0.0",
     "validator": "^13.12.0"
   }
 }
