UPDATE : interview questions api

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,6 +1,7 @@
 PORT = 8000
 NODE_ENV = development 
 MONGODB_LIVE_URI = mongodb+srv://kumarkrishna11231:Prema16@adracluster.xc0ui.mongodb.net/adra?retryWrites=true&w=majority&appName=adraCluster
+MONGODB_LOCAL_URI = mongodb://10.10.24.16:27017/adra
 
 JWT_SECRET = AD6715AC9F18B
 JWT_EXPIRES_TIME=1h
