--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
+    "react-full-screen": "^1.1.1",
     "react-google-charts": "^4.0.1",
     "react-icons": "^5.3.0",
     "react-paginate": "^8.2.0",
